@@ -11,6 +11,7 @@ New features:
 
 Bug fixes:
 * Occasional exception with AcceptAndGetNext (Ctrl+O) followed by something other than Enter
+* Event handlers that register for the engine event PowerShell.OnIdle should work now.
 
 New functions:
 * ValidateAndAcceptLine
